--- a/templates/home.html
+++ b/templates/home.html
@@ -20,9 +20,7 @@
               {{post.short_description | truncatewords:25}}
             </p>
             <p class="lead mb-0">
-              <a href="#" class="text-white font-weight-bold"
-                >Continue reading...</a
-              >
+              <a href="{% url 'blogs' post.slug %}" class="text-white font-weight-bold">Continue reading...</a>
             </p>
           {% endif %}
           {% endfor %}
@@ -37,7 +35,7 @@
             <div class="col-md-6" >
               <div class="card border-0">
                 <div class="card-body">
-                  <h3>{{post.title}}</h3>
+                  <h3><a href="{% url 'blogs' post.slug %}" class="text-dark">{{post.title}}</a></h3>
                   <small class="mb-1 text-muted">{{post.created_at | timesince}} ago | {{post.author}}</small>
                   <p class="card-text">
                     {{post.short_description | truncatewords:25}}
@@ -57,7 +55,7 @@
             {% for post in posts %}
             <div class="card border-0">
                 <div class="card-body">
-                  <h3>{{post.title}}</h3>
+                  <h3><a href="{% url 'blogs' post.slug %}" class="text-dark">{{post.title}}</a></h3>
                   <small class="mb-1 text-muted">{{post.created_at | timesince}} ago | {{post.author}}</small>
                   <p class="card-text">{{post.short_description | truncatewords:25}}</p>
                 </div>
@@ -69,19 +67,19 @@
 
           <aside class="col-md-4 blog-sidebar">
             <div class="p-3 mb-3 bg-light rounded">
-              <h4 class="font-italic">About</h4>
-              <p class="mb-0">
-                Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
-                mattis consectetur purus sit amet fermentum. Aenean lacinia
-                bibendum nulla sed consectetur.
+              <h4 class="font-italic">{{about.about_heading}}</h4>
+              <p class="mb-0">{{about.about_description}}
               </p>
             </div>
 
             <div class="p-3">
               <h4 class="font-italic">Follow Us</h4>
               <ol class="list-unstyled">
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">LinkedIn</a></li>
+                {% if social_links %}
+                {% for i in social_links %}
+                <li><a href="{{i.link}}">{{i.platform}}</a></li>
+                {% endfor %}
+                {% endif %}
               </ol>
             </div>
           </aside>
