--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Django Blogs</title>
+    <title>{% block title %}Django Blogs{%endblock%}</title>
     <link
       href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,8 @@
       rel="stylesheet"
     />
     <link href="{% static 'css/blog.css' %}" rel="stylesheet" />
-    
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
   </head>
   <body>
     <div class="container">
@@ -35,8 +36,13 @@
             </form>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="btn btn-sm btn-warning" href="#">Login</a> &nbsp;
-            <a class="btn btn-sm btn-outline-secondary" href="#">Register</a>
+            {% if not user.is_authenticated %}
+            <a class="btn btn-sm btn-warning" href="{% url 'login' %}"">Login</a> &nbsp;
+            <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
+            {% else %}
+            <span>{{user}}</span>&nbsp;
+            <a href="{% url 'logout' %}" class="btn btn-dark">Logout</a>
+            {% endif %}
           </div>
         </div>
       </header>
@@ -54,10 +60,20 @@
 {% block content %}
 
 {% endblock %}
+{% if messages %}
+  <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <!-- Load message -->
+            {% include 'alert.html' %}
+      </div>
+  </div>
+{% endif %}
 <!-- Footer section -->
  <footer class="blog-footer">
       <p>Django blog built with by <a href="https://www.linkedin.com/in/charan-t-k-1409322a1">Charan T K🚨</a></p>
     </footer>
     </div>
+   
+
   </body>
 </html>
