--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,11 @@
       href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
       rel="stylesheet"
     />
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'css/hovergrow.css' %}">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  >
   </head>
   <body>
     <div class="container">
@@ -40,7 +42,7 @@
             <a class="btn btn-sm btn-warning" href="{% url 'login' %}"">Login</a> &nbsp;
             <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
             {% else %}
-            <span>{{user}}</span>&nbsp;
+            <span><a href="{% url 'dashboard' %}">Dashboard</a></span>&nbsp;
             <a href="{% url 'logout' %}" class="btn btn-dark">Logout</a>
             {% endif %}
           </div>
