--- a/templates/dashboard/add_post.html
+++ b/templates/dashboard/add_post.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
 {% load crispy_forms_tags %}
 <div class="row">
@@ -7,11 +8,13 @@
 
   <!-- right side content -->
    <div class="col-md-9">
-    <h3>Add new Category</h3>
-    <form action="{% url 'add_category' %}" method="POST" style="width: 500px;">
+    <h3>Add new Blog</h3>
+    <form action="{% url 'add_post' %}" method="POST" enctype="multipart/form-data" style="width: 700px;">
       {% csrf_token %}
       {{form | crispy}}
-      <button type = "submit" class="btn btn-warning">Submit</button>
+      
+      <button type = "submit" class="btn btn-warning mb-2 float-right">Submit</button>
+      
     </form>
    </div>
 </div>
