--- a/templates/dashboard/edit_post.html
+++ b/templates/dashboard/edit_post.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
 {% load crispy_forms_tags %}
 <div class="row">
@@ -7,8 +8,8 @@
 
   <!-- right side content -->
    <div class="col-md-9">
-    <h3>Add new Category</h3>
-    <form action="{% url 'add_category' %}" method="POST" style="width: 500px;">
+    <h3>Edit Post</h3>
+    <form action="{% url 'edit_post' post.id %}" method="POST" style="width: 500px;">
       {% csrf_token %}
       {{form | crispy}}
       <button type = "submit" class="btn btn-warning">Submit</button>
