--- a/templates/login.html
+++ b/templates/login.html
@@ -18,11 +18,11 @@
           <input class="form-check-input" type="checkbox" id="rememberMe">
           <label class="form-check-label" for="rememberMe">Remember me</label>
         </div> {% endcomment %}
-        <a href="#" class="text-decoration-none">Forgot password?</a>
+        <a href="{% url 'notavailable' %}" class="text-decoration-none">Forgot password?</a>
       </div>
 
       <!-- Submit -->
-      <div class="d-grid">
+      <div class="text-center">
         <button type="submit" class="btn btn-primary">Login</button>
       </div>
     </form>
