--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
 {% endif %}
 <!-- Footer section -->
  <footer class="blog-footer mt-4">
-      <p>Django blog built with by <a href="https://www.linkedin.com/in/charan-t-k-1409322a1">Charan T K🚨</a></p>
+      <p>Django blog built by <a href="https://www.linkedin.com/in/charan-t-k-1409322a1">Charan T K🚨</a></p>
     </footer>
     </div>
    
