--- a/templates/dashboard/edit_post.html
+++ b/templates/dashboard/edit_post.html
@@ -12,7 +12,7 @@
     <form action="{% url 'edit_post' post.id %}" method="POST" style="width: 500px;">
       {% csrf_token %}
       {{form | crispy}}
-      <button type = "submit" class="btn btn-warning">Submit</button>
+      <button type = "submit" class="btn btn-warning float-right">Submit</button>
     </form>
    </div>
 </div>
