--- a/templates/base.html
+++ b/templates/base.html
@@ -18,16 +18,27 @@
     />
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     <link rel="stylesheet" href="{% static 'css/hovergrow.css' %}">
+    <link rel="stylesheet" href="{% static 'css/scrollmobilebanner.css' %}">
+    
+    
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-
   
   </head>
   <body>
-    <div class="container">
-      <header class="blog-header py-3 ">
+    {% if not debug %}
+      <div class="w-100 text-center text-white overflow-hidden mobile-scroll-banner"
+     style="background-color: #ff4d4f; position: fixed; top: 0; left: 0; z-index: 1050; white-space: nowrap;">
+      <span>
+        ⚠️ This is only for showcase. Please do not enter any actual data or credentials.
+      </span>
+      </div>
+    {% endif %}
+    <div class="container" {% if not debug %}style="margin-top: 30px;"{% endif %}>
+      {% include 'mobileheader.html' %}
+      <header class="d-none d-sm-block blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center ">
           <div class="col-4 pt-1">
             <a class="blog-header-logo text-dark" href="/">Django Blog</a>
@@ -42,7 +53,7 @@
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             {% if not user.is_authenticated %}
-            <a class="btn btn-sm btn-warning" href="{% url 'login' %}"">Login</a> &nbsp;
+            <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a> &nbsp;
             <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
             {% else %}
             {% if perms.blogs.delete_category %}
