--- a/templates/mobileheader.html
+++ b/templates/mobileheader.html
@@ -1,12 +1,17 @@
- <header class="d-block d-sm-none">
+ <header class="d-block d-sm-none blog-header" {% if not debug %}style="margin-top: 30px;"{% endif %}>
     <div class="d-flex flex-wrap align-items-center mb-2 justify-content-center justify-content-lg-start">
 
       <div class="col-12 d-flex justify-content-between align-items-center">
         <a href="/" class="text-dark text-decoration-none blog-header-logo">DB</a>
         {% if user.is_authenticated %}
         <span><i class="fa-regular fa-user text-info">{{user}}</i></span>
+        <a href="{% url 'logout' %}"><i class="fa-solid fa-arrow-right-from-bracket fa-lg"></i></a>
+        {% else %}
+        <div>
+        <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a>
+        <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
+        </div>
         {% endif %}
-        <a href="{% url 'logout' %}"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
       </div>
 
       <form action="{% url 'search' %}" method="GET" class="col-12 mb-2">
@@ -18,8 +23,7 @@
 
       <div class="text-end">
         {% if not user.is_authenticated %}
-        <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a>
-        <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
+
         {% endif %}
 
         {% if perms.blogs.delete_category and '/dashboard/' not in request.path %}
@@ -28,5 +32,4 @@
       </div>
 
     </div>
-  
 </header>
